--- a/patterns/jolla-hw-adaptation-yggdrasil.yaml
+++ b/patterns/jolla-hw-adaptation-yggdrasil.yaml
@@ -34,6 +34,9 @@ Requires:
 - qt5-plugin-generic-evdev
 
 - pulseaudio-modules-droid
+- pulseaudio-modules-droid-hidl
+- audioflingerglue
+
 # for audio recording to work:
 - qt5-qtmultimedia-plugin-mediaservice-gstmediacapture
 
