Include bluebinder in patterns to make Bluetooth work
Fixme: currently fake Bluetooth MAC address is put into
/var/lib/bluetooth/board-address. This needs to be addressed
eventually.

--- a/patterns/jolla-hw-adaptation-yggdrasil.yaml
+++ b/patterns/jolla-hw-adaptation-yggdrasil.yaml
@@ -84,5 +84,8 @@ Requires:
 #- qt5-qtmultimedia-plugin-mediaservice-irisradio
 #- jolla-mediaplayer-radio
 
+# Bluetooth
+- bluebinder
+
 Summary: Jolla HW Adaptation k63v2_64_bsp
 
