--- a/sparse/etc/usb-moded/usb-moded-configfs.ini
+++ b/sparse/etc/usb-moded/usb-moded-configfs.ini
@@ -1,5 +1,5 @@
 [configfs]
 gadget_base_directory = /config/usb_gadget/g1/
-gadget_conf_directory = configs/c.1
+gadget_conf_directory = configs/b.1
 function_rndis = rndis.usb0
  
