--- a/sparse/etc/ofono/ril_subscription.conf
+++ b/sparse/etc/ofono/ril_subscription.conf
@@ -11,7 +11,11 @@ emptyPinQuery=false
 radioPowerCycle=false
 confirmRadioPowerOn=false
 useDataProfiles=true
+mmsDataProfileId=1001
 
+#May need this
+#singleDataContext=true
+ 
 [ril_0]
 transport=binder:name=slot1
 name=slot1
