User ril interfae 1.4

--- a/sparse/etc/ofono/ril_subscription.conf
+++ b/sparse/etc/ofono/ril_subscription.conf
@@ -17,7 +17,7 @@ mmsDataProfileId=1001
 #singleDataContext=true
  
 [ril_0]
-transport=binder:name=slot1
+transport=binder:name=slot1;interface=radio@1.4
 name=slot1
 
 #socket=/dev/socket/rild
@@ -42,5 +42,5 @@ name=slot1
 #networkModeTimeout=20000
 
 [ril_1]
-transport=binder:name=slot2
+transport=binder:name=slot2;interface=radio@1.4
 name=slot2
