Add ssu configuration for los17 sub repository

--- a/sparse/usr/share/ssu/features.d/20-GS290.ini
+++ b/sparse/usr/share/ssu/features.d/20-GS290.ini
@@ -1,2 +1,8 @@
-[release]
-adaptation=http://localhost:8000
+[adaptation-community]
+repos = adaptation-community-yggdrasil
+pattern = Feature community adaptation
+description = Enable ssu for community ports
+
+[repositories]
+adaptation-community-yggdrasil-los17 = http://repo.merproject.org/obs/nemo:/devel:/hw:/volla:/yggdrasil:/los17/sailfish_latest_%(arch)/
+
